--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,8 @@
 html{
-    background-color: rgb(57, 182, 151);
+    background-color: rgb(28, 43, 126);
 }
 body{
-    background-color: rgb(243, 232, 211);
+    background-color: rgb(255, 255, 255);
     font-family: "Verdana";
     text-align: center;
     margin: 0;
@@ -11,7 +11,6 @@ body{
     margin: 30px auto;
     max-width: 40%;
 }
-
 
 label{
     display: block;
@@ -23,12 +22,14 @@ button{
     font-size: 18px;
     padding: 2px 5px;
     margin: 20px 0;
-    border-radius: 5px;
-    
 
 }
 button:hover{
     cursor:pointer;
+}
+select, input[type=text]{
+    font-size: 18px;
+    width:fit-content;
 }
 .start{
     background-color: rgb(43, 182, 78);
@@ -36,7 +37,7 @@ button:hover{
 .start:hover{
     background-color: rgb(162, 226, 178);
 }
-.next{
+.next, .take-another{
     background-color: rgb(102, 155, 224);
 }
 .next:hover{
