--- a/templates/question.html
+++ b/templates/question.html
@@ -14,6 +14,9 @@
     {% for choice in choices %}
     <label><input type="radio" name="answer", value={{choice}}>{{choice}}</label>
     {% endfor %}
+    {% if allow_text %}
+        <input type="text" placeholder="comments" name="comment">
+    {% endif %}
     <input type="hidden" name="index" value={{index}}>
     <button type="submit" class="next">Next</button>
 </form>
