--- a/templates/start.html
+++ b/templates/start.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h3>{{instructions}}</h3>
-<form action = "/questions/0">
+<form action = "/resetSession" method="post">
     <button class="start">Start</button>
 </form>
 {% endblock %}
